# EigenValuesFinder

./: CMakeLists.txt  README.md  main.cpp
libs/InputParser/: InputParser.cpp  InputParser.h
libs/MatrixUtils/: MatrixUtils.cpp  MatrixUtils.h
libs/RationalNum/: RationalNum.cpp  RationalNum.h
libs/RationalNumber/: How to use this class_  RationalNum.cpp
